[gd_scene load_steps=18 format=3 uid="uid://d225nmsfm10mv"]

[ext_resource type="Script" uid="uid://8m8ugxxbryqp" path="res://UI/UpgradeScreen/upgrade_screen.gd" id="1_kyj5a"]
[ext_resource type="Texture2D" uid="uid://bdylnvm06f5fm" path="res://Art/UI/RealUI/Panel.png" id="2_5xjgn"]
[ext_resource type="PackedScene" uid="uid://bm5ye4du2k3ta" path="res://UI/UpgradeScreen/foundation_page/foundation_page.tscn" id="2_fmioe"]
[ext_resource type="PackedScene" uid="uid://dvsbfx38vbaju" path="res://UI/UpgradeScreen/augments_page/augments_page.tscn" id="3_jjsfe"]
[ext_resource type="PackedScene" uid="uid://buj37tqnk8i22" path="res://UI/UpgradeScreen/armory_page/armory_page.tscn" id="4_mbga8"]
[ext_resource type="PackedScene" uid="uid://bfguydj53ut7e" path="res://UI/UpgradeScreen/allies_page/allies_page.tscn" id="5_5xjgn"]
[ext_resource type="Texture2D" uid="uid://bki3p3jojmdp4" path="res://Art/UI/RealUI/Button.png" id="7_lvoou"]
[ext_resource type="AudioStream" uid="uid://crjtqxhwu0o1h" path="res://SFX/UI/back_style_2_004.ogg" id="8_rrvu0"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_lvoou"]
texture = ExtResource("2_5xjgn")
texture_margin_left = 8.0
texture_margin_top = 8.0
texture_margin_right = 8.0
texture_margin_bottom = 8.0
modulate_color = Color(0.29634023, 0.2820734, 0.1793523, 1)

[sub_resource type="LabelSettings" id="LabelSettings_5xjgn"]
font_size = 20

[sub_resource type="LabelSettings" id="LabelSettings_0q4ua"]
font_size = 24

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_rrvu0"]
texture = ExtResource("7_lvoou")
texture_margin_left = 8.0
texture_margin_top = 8.0
texture_margin_right = 12.0
texture_margin_bottom = 12.0
modulate_color = Color(0.5999126, 0.6202909, 0.6289846, 1)

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_rrvu0"]
load_path = "res://.godot/imported/Button.png-6171292bb59ad52ee2b95ed2357b420c.ctex"

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_030fr"]
texture = SubResource("CompressedTexture2D_rrvu0")
texture_margin_left = 8.0
texture_margin_top = 8.0
texture_margin_right = 12.0
texture_margin_bottom = 12.0
modulate_color = Color(0.4660567, 0.4660567, 0.4660567, 1)

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_8dooh"]
load_path = "res://.godot/imported/Button.png-6171292bb59ad52ee2b95ed2357b420c.ctex"

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_c1sd7"]
texture = SubResource("CompressedTexture2D_8dooh")
texture_margin_left = 8.0
texture_margin_top = 8.0
texture_margin_right = 12.0
texture_margin_bottom = 12.0
modulate_color = Color(0.757665, 0.79182553, 0.8054897, 1)

[sub_resource type="LabelSettings" id="LabelSettings_mbga8"]
font_size = 56

[node name="UpgradeScreen" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_kyj5a")

[node name="BG" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 24.888916
offset_top = 14.0
offset_right = -24.888916
offset_bottom = -14.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_lvoou")

[node name="BaseHealthLabel" type="Label" parent="BG"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = 45.0
offset_top = 42.0
offset_right = 226.0
offset_bottom = 61.0
grow_horizontal = 2
size_flags_horizontal = 4
size_flags_vertical = 0
text = "Base Health 100 / 100"
label_settings = SubResource("LabelSettings_5xjgn")
vertical_alignment = 1

[node name="GoldLabel" type="Label" parent="BG"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -143.0
offset_top = 41.0
offset_right = -22.0
offset_bottom = 63.0
grow_horizontal = 2
size_flags_horizontal = 0
size_flags_vertical = 8
text = "Gold: 42069"
label_settings = SubResource("LabelSettings_0q4ua")
vertical_alignment = 1

[node name="MarginContainer" type="MarginContainer" parent="BG"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 32
theme_override_constants/margin_top = 96
theme_override_constants/margin_right = 32
theme_override_constants/margin_bottom = 32

[node name="HBoxContainer" type="HBoxContainer" parent="BG/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="PageButtonsVBoxContainer" type="VBoxContainer" parent="BG/MarginContainer/HBoxContainer"]
custom_minimum_size = Vector2(96, 0)
layout_mode = 2

[node name="FoundationButton" type="Button" parent="BG/MarginContainer/HBoxContainer/PageButtonsVBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
text = "Foundation
"

[node name="AugmentsButton" type="Button" parent="BG/MarginContainer/HBoxContainer/PageButtonsVBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
text = "Augments
"

[node name="ArmoryButton" type="Button" parent="BG/MarginContainer/HBoxContainer/PageButtonsVBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
text = "Armory
"

[node name="AlliesButton" type="Button" parent="BG/MarginContainer/HBoxContainer/PageButtonsVBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
text = "Allies
"

[node name="Pages" type="Control" parent="BG/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="FoundationPage" parent="BG/MarginContainer/HBoxContainer/Pages" instance=ExtResource("2_fmioe")]
unique_name_in_owner = true
layout_mode = 1

[node name="AugmentsPage" parent="BG/MarginContainer/HBoxContainer/Pages" instance=ExtResource("3_jjsfe")]
unique_name_in_owner = true
visible = false
layout_mode = 1

[node name="ArmoryPage" parent="BG/MarginContainer/HBoxContainer/Pages" instance=ExtResource("4_mbga8")]
unique_name_in_owner = true
visible = false
layout_mode = 1
anchors_preset = 15
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0

[node name="AlliesPage" parent="BG/MarginContainer/HBoxContainer/Pages" instance=ExtResource("5_5xjgn")]
unique_name_in_owner = true
visible = false
layout_mode = 1

[node name="NextWaveButton" type="Button" parent="BG"]
unique_name_in_owner = true
z_index = 10
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -344.11108
offset_top = 13.0
offset_right = -35.888916
offset_bottom = 87.0
grow_horizontal = 0
size_flags_horizontal = 8
size_flags_vertical = 0
theme_override_font_sizes/font_size = 24
theme_override_styles/normal = SubResource("StyleBoxTexture_rrvu0")
theme_override_styles/pressed = SubResource("StyleBoxTexture_030fr")
theme_override_styles/hover = SubResource("StyleBoxTexture_c1sd7")
text = "Advance to next wave"

[node name="EndOfTheDayLabel" type="Label" parent="."]
layout_mode = 1
offset_left = 63.0
offset_top = 42.0
offset_right = 417.0
offset_bottom = 94.0
size_flags_horizontal = 4
size_flags_vertical = 0
text = "End of the Day"
label_settings = SubResource("LabelSettings_mbga8")
horizontal_alignment = 1
vertical_alignment = 1

[node name="SwitchPageSound" type="AudioStreamPlayer" parent="."]
unique_name_in_owner = true
stream = ExtResource("8_rrvu0")
bus = &"SFX"

[connection signal="pressed" from="BG/MarginContainer/HBoxContainer/PageButtonsVBoxContainer/FoundationButton" to="." method="_on_foundation_button_pressed"]
[connection signal="pressed" from="BG/MarginContainer/HBoxContainer/PageButtonsVBoxContainer/AugmentsButton" to="." method="_on_augments_button_pressed"]
[connection signal="pressed" from="BG/MarginContainer/HBoxContainer/PageButtonsVBoxContainer/ArmoryButton" to="." method="_on_armory_button_pressed"]
[connection signal="pressed" from="BG/MarginContainer/HBoxContainer/PageButtonsVBoxContainer/AlliesButton" to="." method="_on_allies_button_pressed"]
[connection signal="pressed" from="BG/NextWaveButton" to="." method="_on_next_wave_button_pressed"]
